--- a/scss/_ventaAutos.scss
+++ b/scss/_ventaAutos.scss
@@ -18,6 +18,7 @@
     gap: 20px;
 }
 
+
 #contenedorvaformulario {
     grid-area: formulariova;
     animation: slideIn 1s ease-out forwards;
@@ -27,14 +28,27 @@
     grid-area: h1va;
 }
 
+#infova1 {
+    grid-area: infova1;
+}
+
+#infova2 {
+    grid-area: infova2;
+}
+
+#infova3 {
+    grid-area: infova3;
+}
+
+
 .form-container {
     color: map-get($paleta-colores, 1);
     background: repeating-linear-gradient(
         45deg,
         map-get($paleta-colores, 3),
-        map-get($paleta-colores, 3),
-        map-get($paleta-colores, 4),
-        map-get($paleta-colores, 4)
+        map-get($paleta-colores, 3) 20%,
+        map-get($paleta-colores, 4) 20%,
+        map-get($paleta-colores, 4) 40%
     );
     padding: 20px;
     border-radius: 8px;
@@ -44,7 +58,7 @@
     margin: 0 auto;
     opacity: 0;
     transform: translateY(-50px);
-    grid-area: formulariova;
+
 }
 
 .form-container.show {
@@ -129,9 +143,9 @@
     background: repeating-linear-gradient(
         135deg,
         map-get($paleta-colores, 6),
-        map-get($paleta-colores, 6),
-        map-get($paleta-colores, 7),
-        map-get($paleta-colores, 7) 
+        map-get($paleta-colores, 6) 20%,
+        map-get($paleta-colores, 7) 20%,
+        map-get($paleta-colores, 7) 40%
     );
     color: map-get($paleta-colores, 1);
     grid-area: infova1;
@@ -141,6 +155,8 @@
     align-items: center; 
     text-align: center;
 }
+
+
 
 
 @media (max-width: 768px) {
