--- a/css/main.css
+++ b/css/main.css
@@ -816,6 +816,41 @@ input:checked + .slider:before {
   .pc {
     font-size: 17px; } }
 
+/* Menú */
+nav .nav-link {
+  color: #f0f0f0;
+  /* Asegúrate de que este color sea el deseado */ }
+
+nav .nav-link:hover,
+nav .nav-link:active {
+  color: #9b0000;
+  /* Color al hacer hover */ }
+
+nav .nav-link {
+  font-weight: 500;
+  position: relative; }
+
+@media (min-width: 991px) {
+  .nav-link::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 2px;
+    background-color: #9b0000;
+    visibility: hidden;
+    transition: 0.3s ease-in-out; }
+  .nav-link:hover::before,
+  .nav-link.active::before {
+    width: 100%;
+    visibility: visible; } }
+
+#logo {
+  width: 80px;
+  height: 80px; }
+
 .prods__body {
   background: repeating-linear-gradient(45deg, #464646, #464646 20%, #505050 20%, #505050 40%); }
 
@@ -1196,7 +1231,6 @@ input:checked + .slider:before {
 #infova1 h3, #infova2 h3, #infova3 h3 {
   margin: 10px 0; }
 
-/* Responsive */
 @media (max-width: 768px) {
   #mainVA {
     grid-template-columns: 1fr;
@@ -1204,13 +1238,122 @@ input:checked + .slider:before {
     grid-template-areas: 'h1va' 'formulariova' 'h2va' 'infova1' 'infova2' 'infova3'; }
   .form-container {
     max-width: 100%;
-    padding: 15px; }
+    /* Ocupa todo el ancho disponible */
+    padding: 15px;
+    /* Reduce el padding */ }
+  .form-group input, .form-group textarea {
+    font-size: 14px;
+    /* Tamaño más pequeño en campos de texto */ }
+  .form-group button {
+    font-size: 14px;
+    /* Botón más pequeño */
+    padding: 8px 15px; }
+  /* Reducimos el tamaño de las letras de los textos */
+  #h1va h2, #contenedorh2va h2 {
+    font-size: 20; }
+  #h1va h1, #contenedorh2va h1 {
+    font-size: 24; }
   #infova1, #infova2, #infova3 {
-    height: auto;
-    /* Ajusta la altura automáticamente */
-    width: 100%; }
-  #h1va, #contenedorh2va, #infova1, #infova2, #infova3 {
-    font-size: 16px; } }
+    font-size: 10px;
+    /* Tamaño reducido para contenido */
+    padding: 10px;
+    /* Ajustamos el padding */
+    line-height: 1.4;
+    /* Ajustamos el espaciado entre líneas */
+    width: 300px;
+    height: 400px; }
+    #infova1 h4, #infova2 h4, #infova3 h4 {
+      font-size: 16px; }
+    #infova1 h3, #infova2 h3, #infova3 h3 {
+      font-size: 18; }
+  /* Ajustamos texto del formulario */
+  .form-container label {
+    font-size: 14px;
+    /* Tamaño más pequeño para etiquetas */ }
+  /* Ajustamos otros textos globalmente */
+  body, #mainVA {
+    font-size: 14px;
+    /* Tamaño más pequeño para todo el contenido general */ } }
+
+@media (min-width: 1366px) and (max-width: 1366px) {
+  #mainVA {
+    grid-template-columns: repeat(3, 1fr);
+    /* Tres columnas para aprovechar el ancho */
+    grid-template-rows: auto auto auto auto auto auto;
+    grid-template-areas: 'h1va h1va h1va' 'formulariova formulariova formulariova' 'h2va h2va h2va' 'infova1 infova2 infova3'; }
+  .form-container {
+    max-width: 100%;
+    /* Mantiene el ancho completo */
+    padding: 20px;
+    /* Padding moderado */ }
+  .form-group input, .form-group textarea {
+    font-size: 16px;
+    /* Tamaño de fuente moderado en campos de texto */ }
+  .form-group button {
+    font-size: 16px;
+    /* Botón más grande */
+    padding: 10px 18px; }
+  /* Ajustamos los tamaños de los títulos y contenido */
+  #h1va h2, #contenedorh2va h2 {
+    font-size: 20; }
+  #h1va h1, #contenedorh2va h1 {
+    font-size: 24; }
+  #infova1, #infova2, #infova3 {
+    font-size: 14px;
+    /* Tamaño de texto más grande para contenido */
+    padding: 12px;
+    /* Un poco más de padding */
+    line-height: 1.5;
+    /* Espaciado adecuado entre líneas */
+    width: 400px;
+    height: 500px; }
+    #infova1 h4, #infova2 h4, #infova3 h4 {
+      font-size: 16px; }
+    #infova1 h3, #infova2 h3, #infova3 h3 {
+      font-size: 18; }
+  /* Ajustamos texto del formulario */
+  .form-container label {
+    font-size: 16px;
+    /* Etiquetas con tamaño de fuente moderado */ }
+  /* Ajustamos otros textos globalmente */
+  body, #mainVA {
+    font-size: 14px;
+    /* Tamaño más pequeño para todo el contenido general */ } }
+
+/* Menú */
+nav .nav-link {
+  color: #f0f0f0;
+  /* Asegúrate de que este color sea el deseado */ }
+
+nav .nav-link:hover,
+nav .nav-link:active {
+  color: #9b0000;
+  /* Color al hacer hover */ }
+
+nav .nav-link {
+  font-weight: 500;
+  position: relative; }
+
+@media (min-width: 991px) {
+  .nav-link::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 2px;
+    background-color: #9b0000;
+    visibility: hidden;
+    transition: 0.3s ease-in-out; }
+  .nav-link:hover::before,
+  .nav-link.active::before {
+    width: 100%;
+    visibility: visible; } }
+
+#logo {
+  width: 80px;
+  height: 80px; }
 
 @keyframes aparecer {
   0% {
