--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,5 +1,5 @@
 header{
-    background-color: map-get($paleta-colores, 12);
+    background-image: linear-gradient(to top, map-get($paleta-colores, 2), map-get($paleta-colores, 7),map-get($paleta-colores, 7), map-get($paleta-colores, 6));
 }
 
 nav{
