reparé páginas de registro y sesion

--- a/css/main.css
+++ b/css/main.css
@@ -1073,6 +1073,7 @@ input:checked + .slider:before {
   border: 1px solid #9b0000;
   transition: all .5s ease; }
   .form-body button a {
+    text-align: center;
     text-decoration: none;
     color: black;
     transition: all .3s; }
