--- a/scss/_registro-inicioSesion.scss
+++ b/scss/_registro-inicioSesion.scss
@@ -83,6 +83,7 @@ $color-blanco: #fff;
     border: 1px solid #9b0000;
     transition: all .5s ease;
     a{
+        text-align: center;
         text-decoration: none;
         color: black;
         transition: all .3s;
